# coolname-hash

./: .coveragerc  .flake8  .gitignore  .travis.yml  HISTORY.rst  MANIFEST.in  README.rst  coolname_hash.py  pyproject.toml  requirements.txt  setup.py  tests.py  tox.ini
.github/workflows/: ci.yml
coolname_hash/: __init__.py
requirements/: development.txt  test.txt
src/coolname_hash/: __init__.py
tests/: test_coolname_hash.py
