[build-system]
requires = ["setuptools==80.10.1", "setuptools-scm==9.2.2"]
build-backend = "setuptools.build_meta"

[project]
name = "coolname-hash"
dynamic = ["version"]
description = "Human-readable pseudo-hash, based on coolname"
requires-python = ">= 3.10"
dependencies = ["coolname==3.1.0"]
license = "BSD-2-Clause"
license-files = ["LICENSE"]
authors = [{name = "Alexander Lukanin", email = "alexander.lukanin.13@gmail.com"}]
readme = "README.rst"
keywords = ["identifier", "pseudohash"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]

[project.urls]
Homepage = "https://github.com/alexanderlukanin13/coolname-hash"
Documentation = "https://coolname.readthedocs.io/en/latest/"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_file = "src/coolname_hash/_version.py"
